-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228937 | 12u-cpu | Leonid Mesnik | P3 | Resolved | Fixed | master |
| JDK-8223487 | 12.0.2 | Leonid Mesnik | P3 | Resolved | Fixed | b03 |
| JDK-8229992 | 11.0.6-oracle | Harold Seigel | P3 | Resolved | Fixed | b01 |
| JDK-8223483 | 11.0.4 | Leonid Mesnik | P3 | Resolved | Fixed | b02 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/lmesnik/ws/ks-apps/open/src/hotspot/share/prims/methodHandles.cpp:320), pid=25850, tid=25978
# assert(java_lang_invoke_ResolvedMethodName::vmtarget(resolved_method()) == m()) failed: Should not change after link resolution
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-2019-03-21-1917549.lmesnik.null)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-2019-03-21-1917549.lmesnik.null, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1279b0c] MethodHandles::init_method_MemberName(Handle, CallInfo&)+0x24c
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/lmesnik/ws/bigapps/results/ks/core.25850)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -XX:MaxRAMPercentage=50 -XX:+HeapDumpOnOutOfMemoryError -XX:+CrashOnOutOfMemoryError -Djava.net.preferIPv6Addresses=false -XX:+DisplayVMOutputToStderr -XX:+UsePerfData -Xlog:gc*,gc+heap=debug:gc.log:uptime,timemillis,level,tags -XX:+DisableExplicitGC -XX:+StartAttachListener -XX:NativeMemoryTracking=detail -XX:+FlightRecorder --add-exports=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED -Djava.io.tmpdir=/home/lmesnik/ws/bigapps/results/ks/java.io.tmpdir -Duser.home=/home/lmesnik/ws/bigapps/results/ks/user.home -agentpath:/home/lmesnik/ws/ks-apps/build/linux-x64/images/test/hotspot/jtreg/native/libJvmtiStressModule.so -Xverify:all -javaagent:redefineagent.jar applications.kitchensink.process.stress.Main /home/lmesnik/ws/bigapps/results/ks/kitchensink.final.properties
Host: Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz, 8 cores, 15G, Ubuntu 18.04.2 LTS
Time: Thu Mar 21 17:12:07 2019 PDT elapsed time: 9 seconds (0d 0h 0m 9s)
--------------- T H R E A D ---------------
Current thread (0x00007fd33c72d800): JavaThread "SpecJbb2005StressModule" [_thread_in_vm, id=25978, stack(0x00007fd301292000,0x00007fd301393000)]
Stack: [0x00007fd301292000,0x00007fd301393000], sp=0x00007fd30138e180, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1279b0c] MethodHandles::init_method_MemberName(Handle, CallInfo&)+0x24c
V [libjvm.so+0xdccab2] java_lang_StackFrameInfo::set_method_and_bci(Handle, methodHandle const&, int, Thread*)+0x122
V [libjvm.so+0x151a3cc] JavaFrameStream::fill_frame(int, objArrayHandle, methodHandle const&, Thread*)+0x77c
V [libjvm.so+0x151f190] StackWalk::fill_in_frames(long, BaseFrameStream&, int, int, objArrayHandle, int&, Thread*)+0x250
V [libjvm.so+0x151fef0] StackWalk::fetchNextBatch(Handle, long, long, int, int, objArrayHandle, Thread*)+0x190
V [libjvm.so+0xf02ad7] JVM_MoreStackWalk+0x197
j java.lang.StackStreamFactory$AbstractStackWalker.fetchStackFrames(JJII[Ljava/lang/Object;)I+0 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.fetchStackFrames(I)I+35 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.getNextBatch()I+61 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.peekFrame()Ljava/lang/Class;+32 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.hasNext()Z+1 java.base@13-internal
j java.lang.StackStreamFactory$StackFrameTraverser.tryAdvance(Ljava/util/function/Consumer;)Z+16 java.base@13-internal
j java.util.stream.ReferencePipeline.forEachWithCancel(Ljava/util/Spliterator;Ljava/util/stream/Sink;)Z+13 java.base@13-internal
j java.util.stream.AbstractPipeline.copyIntoWithCancel(Ljava/util/stream/Sink;Ljava/util/Spliterator;)Z+32 java.base@13-internal
j java.util.stream.AbstractPipeline.copyInto(Ljava/util/stream/Sink;Ljava/util/Spliterator;)V+49 java.base@13-internal
j java.util.stream.AbstractPipeline.wrapAndCopyInto(Ljava/util/stream/Sink;Ljava/util/Spliterator;)Ljava/util/stream/Sink;+13 java.base@13-internal
j java.util.stream.FindOps$FindOp.evaluateSequential(Ljava/util/stream/PipelineHelper;Ljava/util/Spliterator;)Ljava/lang/Object;+14 java.base@13-internal
j java.util.stream.AbstractPipeline.evaluate(Ljava/util/stream/TerminalOp;)Ljava/lang/Object;+88 java.base@13-internal
j java.util.stream.ReferencePipeline.findFirst()Ljava/util/Optional;+5 java.base@13-internal
j java.util.logging.LogRecord$CallerFinder.lambda$get$1(Ljava/util/stream/Stream;)Ljava/util/Optional;+7 java.logging@13-internal
j java.util.logging.LogRecord$CallerFinder$$Lambda$193.apply(Ljava/lang/Object;)Ljava/lang/Object;+8 java.logging@13-internal
j java.lang.StackStreamFactory$StackFrameTraverser.consumeFrames()Ljava/lang/Object;+25 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.doStackWalk(JIIII)Ljava/lang/Object;+78 java.base@13-internal
v ~StubRoutines::call_stub
V [libjvm.so+0xdc1a3a] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6ea
V [libjvm.so+0x15209d0] StackWalk::fetchFirstBatch(BaseFrameStream&, Handle, long, int, int, int, objArrayHandle, Thread*)+0x860
V [libjvm.so+0x152111c] StackWalk::walk(Handle, long, int, int, int, objArrayHandle, Thread*)+0x57c
V [libjvm.so+0xf02606] JVM_CallStackWalk+0x1d6
j java.lang.StackStreamFactory$AbstractStackWalker.callStackWalk(JIII[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.beginStackWalk()Ljava/lang/Object;+31 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.walk()Ljava/lang/Object;+8 java.base@13-internal
j java.lang.StackWalker.walk(Ljava/util/function/Function;)Ljava/lang/Object;+10 java.base@13-internal
j java.util.logging.LogRecord$CallerFinder.get()Ljava/util/Optional;+9 java.logging@13-internal
j java.util.logging.LogRecord.inferCaller()V+12 java.logging@13-internal
j java.util.logging.LogRecord.getSourceClassName()Ljava/lang/String;+8 java.logging@13-internal
j java.util.logging.SimpleFormatter.format(Ljava/util/logging/LogRecord;)Ljava/lang/String;+12 java.logging@13-internal
j spec.jbb.JBBLogFormatter.format(Ljava/util/logging/LogRecord;)Ljava/lang/String;+6
j java.util.logging.StreamHandler.publish(Ljava/util/logging/LogRecord;)V+14 java.logging@13-internal
j java.util.logging.Logger.log(Ljava/util/logging/LogRecord;)V+90 java.logging@13-internal
j java.util.logging.Logger.doLog(Ljava/util/logging/LogRecord;)V+46 java.logging@13-internal
j java.util.logging.Logger.log(Ljava/util/logging/Level;Ljava/lang/String;)V+21 java.logging@13-internal
j java.util.logging.Logger.info(Ljava/lang/String;)V+5 java.logging@13-internal
j spec.jbb.JBBmain.main([Ljava/lang/String;)V+1168
v ~StubRoutines::call_stub
V [libjvm.so+0xdc1a3a] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6ea
V [libjvm.so+0x146c005] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.122]+0xbd5
V [libjvm.so+0x146d08a] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x19a
V [libjvm.so+0xf160a2] JVM_InvokeMethod+0x212
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@13-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@13-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@13-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@13-internal
j applications.kitchensink.process.stress.modules.SpecJbb2005StressModule.execute()V+68
j applications.kitchensink.process.stress.modules.StressModule.run()V+109
v ~StubRoutines::call_stub
V [libjvm.so+0xdc1a3a] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6ea
V [libjvm.so+0xdbeaaf] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x33f
V [libjvm.so+0xdbecca] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0xca
V [libjvm.so+0xeff591] thread_entry(JavaThread*, Thread*)+0x91
V [libjvm.so+0x162ca16] JavaThread::thread_main_inner()+0x1b6
V [libjvm.so+0x1632aa6] Thread::call_run()+0xf6
V [libjvm.so+0x135300d] thread_native_entry(Thread*)+0x10d
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j java.lang.StackStreamFactory$AbstractStackWalker.fetchStackFrames(JJII[Ljava/lang/Object;)I+0 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.fetchStackFrames(I)I+35 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.getNextBatch()I+61 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.peekFrame()Ljava/lang/Class;+32 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.hasNext()Z+1 java.base@13-internal
j java.lang.StackStreamFactory$StackFrameTraverser.tryAdvance(Ljava/util/function/Consumer;)Z+16 java.base@13-internal
j java.util.stream.ReferencePipeline.forEachWithCancel(Ljava/util/Spliterator;Ljava/util/stream/Sink;)Z+13 java.base@13-internal
j java.util.stream.AbstractPipeline.copyIntoWithCancel(Ljava/util/stream/Sink;Ljava/util/Spliterator;)Z+32 java.base@13-internal
j java.util.stream.AbstractPipeline.copyInto(Ljava/util/stream/Sink;Ljava/util/Spliterator;)V+49 java.base@13-internal
j java.util.stream.AbstractPipeline.wrapAndCopyInto(Ljava/util/stream/Sink;Ljava/util/Spliterator;)Ljava/util/stream/Sink;+13 java.base@13-internal
j java.util.stream.FindOps$FindOp.evaluateSequential(Ljava/util/stream/PipelineHelper;Ljava/util/Spliterator;)Ljava/lang/Object;+14 java.base@13-internal
j java.util.stream.AbstractPipeline.evaluate(Ljava/util/stream/TerminalOp;)Ljava/lang/Object;+88 java.base@13-internal
j java.util.stream.ReferencePipeline.findFirst()Ljava/util/Optional;+5 java.base@13-internal
j java.util.logging.LogRecord$CallerFinder.lambda$get$1(Ljava/util/stream/Stream;)Ljava/util/Optional;+7 java.logging@13-internal
j java.util.logging.LogRecord$CallerFinder$$Lambda$193.apply(Ljava/lang/Object;)Ljava/lang/Object;+8 java.logging@13-internal
j java.lang.StackStreamFactory$StackFrameTraverser.consumeFrames()Ljava/lang/Object;+25 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.doStackWalk(JIIII)Ljava/lang/Object;+78 java.base@13-internal
v ~StubRoutines::call_stub
j java.lang.StackStreamFactory$AbstractStackWalker.callStackWalk(JIII[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.beginStackWalk()Ljava/lang/Object;+31 java.base@13-internal
j java.lang.StackStreamFactory$AbstractStackWalker.walk()Ljava/lang/Object;+8 java.base@13-internal
j java.lang.StackWalker.walk(Ljava/util/function/Function;)Ljava/lang/Object;+10 java.base@13-internal
j java.util.logging.LogRecord$CallerFinder.get()Ljava/util/Optional;+9 java.logging@13-internal
j java.util.logging.LogRecord.inferCaller()V+12 java.logging@13-internal
j java.util.logging.LogRecord.getSourceClassName()Ljava/lang/String;+8 java.logging@13-internal
j java.util.logging.SimpleFormatter.format(Ljava/util/logging/LogRecord;)Ljava/lang/String;+12 java.logging@13-internal
j spec.jbb.JBBLogFormatter.format(Ljava/util/logging/LogRecord;)Ljava/lang/String;+6
j java.util.logging.StreamHandler.publish(Ljava/util/logging/LogRecord;)V+14 java.logging@13-internal
j java.util.logging.Logger.log(Ljava/util/logging/LogRecord;)V+90 java.logging@13-internal
j java.util.logging.Logger.doLog(Ljava/util/logging/LogRecord;)V+46 java.logging@13-internal
j java.util.logging.Logger.log(Ljava/util/logging/Level;Ljava/lang/String;)V+21 java.logging@13-internal
j java.util.logging.Logger.info(Ljava/lang/String;)V+5 java.logging@13-internal
j spec.jbb.JBBmain.main([Ljava/lang/String;)V+1168
v ~StubRoutines::call_stub
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@13-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@13-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@13-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@13-internal
j applications.kitchensink.process.stress.modules.SpecJbb2005StressModule.execute()V+68
j applications.kitchensink.process.stress.modules.StressModule.run()V+109
v ~StubRoutines::call_stub
- backported by
-
JDK-8223483 assert(java_lang_invoke_ResolvedMethodName::vmtarget(resolved_method()) == m()) failed: Should not change after link resolution
-
- Resolved
-
-
JDK-8223487 assert(java_lang_invoke_ResolvedMethodName::vmtarget(resolved_method()) == m()) failed: Should not change after link resolution
-
- Resolved
-
-
JDK-8228937 assert(java_lang_invoke_ResolvedMethodName::vmtarget(resolved_method()) == m()) failed: Should not change after link resolution
-
- Resolved
-
-
JDK-8229992 assert(java_lang_invoke_ResolvedMethodName::vmtarget(resolved_method()) == m()) failed: Should not change after link resolution
-
- Resolved
-
- relates to
-
JDK-8174749 Use hash table/oops for MemberName table
-
- Resolved
-